nowrap fix

--- a/assets/sass/app.sass
+++ b/assets/sass/app.sass
@@ -83,6 +83,3 @@
 
 .overflow-x
   overflow-x: auto
-
-.nowrap
-  white-space: nowrap
